@@ -157,3 +157,19 @@ mvn package -Dosgi.bnd.noee=true
 (This is equivalent to passing the "-noee" option to the OSGi "bnd" tool.)
 
 Another workaround is to tell your OSGi container to provide that requirement: [StackOverflow answer](https://stackoverflow.com/a/24673359/163832).
+
+### Does this SDK require any special ProGuard rules for shrink optimizations?
+
+Yes. This SDK uses Jackson JSON libraries for serialization. Specifically:
+
+  * [Jackson Core](https://github.com/FasterXML/jackson-core)
+  * [Jackson Annotations](https://github.com/FasterXML/jackson-annotations)
+  * [Jackson Databind](https://github.com/FasterXML/jackson-databind)
+
+Jackson Databind makes use of reflection and annotations to map Java objects to JSON. Your ProGuard configuration should ensure Jackson annotations and Object mapping classes are kept. An example configuration is shown below:
+
+```
+-keepattributes *Annotation*,EnclosingMethod,InnerClasses,Signature
+-keepnames class com.fasterxml.jackson.** { *; }
+-dontwarn com.fasterxml.jackson.databind.**
+```
