@@ -1,3 +1,4 @@
+- Support ProGuard shrinking for Android development and provide example.
 - Rename v2 request classes to support future auth styles:
     - DbxFiles -> DbxUserFilesRequests
     - DbxSharing -> DbxUserSharingRequests
